[tool.poetry]
name = "testtask"
version = "0.1.0"
description = ""
authors = ["Ivan20010620 <spirittime999@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
