[tool.poetry]
name = "testtask"
version = "0.1.0"
description = ""
authors = ["IKLASHKOV <yato252@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
uvicorn = "^0.30.6"
pymysql = "^1.1.1"
pytest = "^8.3.3"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
